# project-manager-app

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  pub.cmd  readme.org  rustfmt.toml
.github/workflows/: homebrew.yml  publish.yml  pull-request.yml  release.yml
.kiro/hooks/: rust-clippy-lint.kiro.hook  rust-format-on-save.kiro.hook
.trae/specs/command-control-layer/: checklist.md  spec.md  tasks.md
Formula/: pma.rb
docs/: architecture.md
docs/issue/: 01-发布流程改进.org  02-架构优化建议.org
docs/spec/: 01-系统架构.org
npm/: version.js
npm/pma/: index.js  package.json  pnpm-lock.yaml
npm/pma-darwin-arm64/: package.json
npm/pma-darwin-x64/: package.json
npm/pma-linux-x64/: package.json
npm/pma-win32-arm64/: package.json
npm/pma-win32-x64/: package.json
src/: cli.rs  cli_old.rs  error.rs  main.rs  utils.rs
src/app/: bomup.rs  doctor.rs  fork.rs  git.rs  housekeeping.rs  init.rs  mod.rs  release.rs  repo.rs  runner.rs  selfman.rs  snap.rs  sync.rs  utils.rs  version.rs  version_editor.rs
src/cli/: args.rs  cli.rs  commands.rs  dispatcher.rs  mod.rs  parser.rs  styles.rs
src/commands/: branch.rs  config.rs  doctor.rs  fork.rs  gitlab.rs  mod.rs  multi_repo.rs  release.rs  runtime.rs  self_update.rs  selfman.rs  snap.rs  status.rs  sync.rs
src/control/: command.rs  context.rs  mod.rs  pipeline.rs  plan.rs  remote.rs
src/domain/: context.rs  error.rs  mod.rs  project_config.rs
src/engine/: plan.rs
src/model/: git.rs  mod.rs  operation.rs  plan.rs  project_config.rs
src/utils/: error.rs  file.rs  git.rs  mod.rs  output.rs  path.rs  process.rs
(+122 files in other folders)
