[package]
name = "project-manager-app"
version = "0.5.6"
edition = "2024"

[[bin]]
name = "pma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
anstyle = "1.0"
clap = { version = "4.5", features = ["derive", "color", "help"] }
colored = "3.1.1"
heck = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"