[package]
name = "project-manager-app"
version = "0.8.1"
edition = "2024"

[[bin]]
name = "pma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
anstyle = "1.0"
clap = { version = "4.5", features = ["derive", "color", "help"] }
colored = "3.1.1"
flate2 = "1.1"
heck = "0.5"
regex = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
ureq = { version = "2.12", features = ["json"] }
zip = "8"