[package]
name = "project-manager-app"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "pma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
anstyle = "1.0"
clap = { version = "4.5", features = ["derive", "color", "help"] }
colored = "3.1.1"
flate2 = "1.1"
heck = "0.5"
regex = "1"
roxmltree = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
toml = "0.8"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
rpassword = "7"
zip = "8"
indicatif = "0.18.4"
url = "2.5.8"
